tests/tlox/parse/snapshots/file_tests__parse__err_for_loops.lx@invalid_field.snap
---
source: tests/parse.rs
description: "for (x = var;;) something;\n\n"
expression: render_dcx()
---
error: unexpected keyword `var` token in input
  --> err_for_loops.lx@invalid_field:1:10
  |
1 | for (x = var;;) something;
  |          ^^^ unexpected token here
  |
  = note: expected expression
